src/tests/snapshots/nitrocli__tests__run__nitrocli_pws_-h.snap
---
source: src/tests/run.rs
expression: s

---
nitrocli-pws 

Accesses the password safe

USAGE:
    nitrocli pws [OPTIONS] <SUBCOMMAND>

OPTIONS:
    -h, --help
            Print help information

    -m, --model <MODEL>
            Selects the device model to connect to [possible values: librem, pro, storage]

        --no-cache
            Disables the cache for all secrets

        --serial-number <SERIAL_NUMBERS>
            Sets the serial number of the device to connect to. Can be set multiple times to allow
            multiple serial numbers

        --usb-path <USB_PATH>
            Sets the USB path of the device to connect to

    -v, --verbose
            Increases the log level (can be supplied multiple times)

SUBCOMMANDS:
    add       Adds a new password safe slot
    clear     Clears a password safe slot
    get       Reads a password safe slot
    help      Print this message or the help of the given subcommand(s)
    status    Prints the status of the password safe slots
    update    Updates a password safe slot


