src/tests/snapshots/nitrocli__tests__run__nitrocli_pws_add_--help.snap
---
source: src/tests/run.rs
expression: s

---
nitrocli-pws-add 0.4.1
Adds a new password safe slot

USAGE:
    nitrocli pws add [FLAGS] [OPTIONS] <name> <login> <password>

FLAGS:
    -h, --help        
            Prints help information

        --no-cache    
            Disables the cache for all secrets

    -V, --version     
            Prints version information

    -v, --verbose     
            Increases the log level (can be supplied multiple times)


OPTIONS:
    -m, --model <model>                        
            Selects the device model to connect to [possible values: librem, pro, storage]

        --serial-number <serial-numbers>...    
            Sets the serial number of the device to connect to. Can be set multiple times to allow multiple serial
            numbers
    -s, --slot <slot>                          
            The number of the slot to write
            
            If this option is not set, the first unprogrammed slot is used.
        --usb-path <usb-path>                  
            Sets the USB path of the device to connect to


ARGS:
    <name>        
            The name to store on the slot

    <login>       
            The login to store on the slot

    <password>    
            The password to store on the slot


