src/tests/snapshots/nitrocli__tests__run__nitrocli_pws_get_--help.snap
---
source: src/tests/run.rs
expression: s

---
nitrocli-pws-get 

Reads a password safe slot

USAGE:
    nitrocli pws get [OPTIONS] <SLOT>

ARGS:
    <SLOT>    The PWS slot to read

OPTIONS:
    -h, --help
            Print help information

    -l, --login
            Shows the login stored on the slot

    -m, --model <MODEL>
            Selects the device model to connect to [possible values: librem, pro, storage]

    -n, --name
            Shows the name stored on the slot

        --no-cache
            Disables the cache for all secrets

    -p, --password
            Shows the password stored on the slot

    -q, --quiet
            Prints the stored data without description

        --serial-number <SERIAL_NUMBERS>
            Sets the serial number of the device to connect to. Can be set multiple times to allow
            multiple serial numbers

        --usb-path <USB_PATH>
            Sets the USB path of the device to connect to

    -v, --verbose
            Increases the log level (can be supplied multiple times)


