src/tests/snapshots/nitrocli__tests__run__nitrocli_pws_update_--help.snap
---
source: src/tests/run.rs
expression: s

---
nitrocli-pws-update 0.4.1
Updates a password safe slot

USAGE:
    nitrocli pws update [FLAGS] [OPTIONS] <slot>

FLAGS:
    -h, --help        Prints help information
        --no-cache    Disables the cache for all secrets
    -V, --version     Prints version information
    -v, --verbose     Increases the log level (can be supplied multiple times)

OPTIONS:
    -l, --login <login>                        The new login to store on the slot
    -m, --model <model>                        Selects the device model to connect to [possible values: librem, pro,
                                               storage]
    -n, --name <name>                          The new name to store on the slot
    -p, --password <password>                  The new password to store on the slot
        --serial-number <serial-numbers>...    Sets the serial number of the device to connect to. Can be set multiple
                                               times to allow multiple serial numbers
        --usb-path <usb-path>                  Sets the USB path of the device to connect to

ARGS:
    <slot>    The PWS slot to update

